# vastimage

./: .gitignore  Dockerfile  LICENSE  config.py  entrypoint.sh  gateway.py  instance.py  main.py  pyproject.toml  ruff.toml  ssh.py  utils.py  vast_api.py
.github/workflows/: publish.yml
rootfs/: entrypoint.sh  server.sh
rootfs/home/fox/.ssh/: authorized_keys
scripts/: qwen3-coder-next.sh
tests/: __init__.py  conftest.py  test_config.py  test_ssh.py  test_utils.py  test_vast_api.py
tests/fixtures/: sample_data.py
